--- a/themes/so-simple/layouts/_default/baseof.html
+++ b/themes/so-simple/layouts/_default/baseof.html
@@ -2,10 +2,12 @@
 <html>
     {{- partial "head.html" . -}}
     <body>
-        {{- partial "header.html" . -}}
-        <div id="content">
-        {{- block "main" . }}{{- end }}
-        </div>
+	    {{- partial "header.html" . -}}
+	    <!-- <div id="container"> -->
+		    <div id="content">
+			    {{- block "main" . }}{{- end }}
+		    </div>
+	    <!-- </div> -->
         {{- partial "footer.html" . -}}
     </body>
 </html>
