--- a/themes/so-simple/static/css/main.css
+++ b/themes/so-simple/static/css/main.css
@@ -9,6 +9,15 @@ body {
 	width: 450px;
 }
 
+@media only screen and (max-width: 500px) {
+	#content {
+		width: 90%;
+		margin-left: 5%;
+		margin-right: 5%;
+		position: relative;
+	}
+}
+
 a:visited, a:link {
 	color: #FFC806;
 	text-decoration: none;
@@ -22,4 +31,18 @@ ul {
 	list-style-type: none;
 	text-align: left;
 	padding-left: 0;
+}
+
+figure {
+	margin-inline: 0;
+}
+
+figure img {
+	border-radius: 8px;
+}
+
+figcaption p {
+	margin-block-start: 0;
+	font-style: italic;
+	font-size: 12px;
 }
