--- a/themes/so-simple/layouts/_default/single.html
+++ b/themes/so-simple/layouts/_default/single.html
@@ -1,6 +1,10 @@
 {{ define "main" }}
 
 <div>
+	<a href="/"><- Back</a>
+</div>
+
+<div>
 	<h1>{{ .Title }}</h1>
 	<span>{{ time.Format "2006-01-02" .Date }}</span>
 
